[package]
name = "prime_time"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1.0.98"
tokio-util = { version = "0.7.15", features = ["codec"] }
serde_json = "1.0.141"
futures = "0.3.31"
chrono = { version = "0.4.41", features = ["alloc"] }
slab = "0.4.10"

[dev-dependencies]
similar = "2.1"
tracing-test = "0.2"
